Resized display window to be consistent with region selector, styled individual stretches, ensured display window grows if stretches exceed minimum height

--- a/client/stylesheets/home.scss
+++ b/client/stylesheets/home.scss
@@ -7,7 +7,6 @@
 .dynamic-direction {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 @media screen and (max-width: 1570px) {
