--- a/client/stylesheets/stretchDisplay.scss
+++ b/client/stylesheets/stretchDisplay.scss
@@ -7,10 +7,9 @@
     // float:right;
 
     */
-    height:1000px;
+    min-height: 578px;
     width: 900px;
     right: 75px;
-    top: 120px;
     border-radius: 4px;
     border: 1px solid black;
     background-color: #92D293;
