--- a/client/stylesheets/stretchDisplayWindow.scss
+++ b/client/stylesheets/stretchDisplayWindow.scss
@@ -2,7 +2,6 @@
 .StretchDisplayWindow {
     width: 90%;
     height: 90%;
-    background-color: lightgray;
     justify-self: center;
     align-self: center;
     margin-left: 45px;
